Minor cleanup. Resource leaks eliminated. All tests pass.