@@ -63,7 +63,6 @@ import statechum.analysis.learning.rpnicore.LearnerGraphND;
 import statechum.analysis.learning.rpnicore.LearnerGraphNDCachedData;
 import statechum.analysis.learning.rpnicore.Transform.ConvertALabel;
 import statechum.analysis.learning.rpnicore.WMethod;
-import statechum.analysis.learning.linear.TestGD;
 import statechum.analysis.learning.rpnicore.WMethod.DifferentFSMException;
 import statechum.analysis.learning.rpnicore.WMethod.VERTEX_COMPARISON_KIND;
 
@@ -112,10 +111,10 @@ public class TestGD_ExistingGraphs
 			{
 				for(double ratio:new double[]{0.6,0.9})
 					for(int pairs:new int[]{0,40})
-						result.add(new Object[]{new Integer(threadNo), new Integer(pairs),ratio,fileA,fileB});
+						result.add(new Object[]{Integer.valueOf(threadNo), Integer.valueOf(pairs),ratio,fileA,fileB});
 
 				// -1. should be floating-point number otherwise it is turned into Integer and our parametersToString fails to match the resulting list of values.
-				result.add(new Object[]{new Integer(threadNo), new Integer(0),-1.,fileA,fileB});
+				result.add(new Object[]{Integer.valueOf(threadNo), Integer.valueOf(0),-1.,fileA,fileB});
 				
 				progress.next();
 			}
