@@ -81,8 +81,8 @@ public class TestGD_Multithreaded {
 		Collection<Object []> result = new LinkedList<Object []>();
 		for(int i=1;i<8;++i)
 		{
-			result.add(new Object[]{new Integer(i),false});
-			result.add(new Object[]{new Integer(i),true});
+			result.add(new Object[]{Integer.valueOf(i),false});
+			result.add(new Object[]{Integer.valueOf(i),true});
 		}
 		return result;
 	}
